Removes Horizontal Scrolling; Corrects Margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     color: #4A4A4A;
+    margin: 0px;
 }
 
 main {
@@ -333,11 +334,9 @@ footer p {
         margin-right: auto;
     }
 
-    .main-container {
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-
+body {
+    margin: 20px;
+}
     .name-nav-container {
         display: flex;
         max-width: 1400px;
